hphp/hack/test/typecheck/disable_legacy_refinement/arrays.php.exp
File "arrays.php", line 5, characters 17-18:
Invalid argument (Typing[4110])
  File "arrays.php", line 15, characters 22-42:
  This is an object of type dict
  File "arrays.php", line 3, characters 12-16:
  It is incompatible with a mixed value
File "arrays.php", line 8, characters 19-20:
Invalid argument (Typing[4110])
  File "arrays.php", line 16, characters 24-39:
  This is an object of type keyset
  File "arrays.php", line 3, characters 12-16:
  It is incompatible with a mixed value
File "arrays.php", line 11, characters 16-17:
Invalid argument (Typing[4110])
  File "arrays.php", line 17, characters 21-30:
  This is an object of type vec
  File "arrays.php", line 3, characters 12-16:
  It is incompatible with a mixed value
